# speech-to-text-to-speech

./: README.md  pyproject.toml  readme.md
speech_to_text_to_speech/: .env  Logger.py  __init__.py  main.py  playsound.py
